cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hola mundo</title>
 </head>
 <p>
- hola estudiantes esta es mi pagina web 
-   sigueme en twitter en alexis si tienes duda, preguntame. 
+ hola amigas & amigos esta es mi pagina web 
+   sigueme en twitter en alexis si tienes duda, preguntame en vivo en twicht. 
 </body>
 </html>
